# MNIST-digit-rcog

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleaner.sh  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
implementation/: CMakeLists.txt
implementation/nnimpl/: CMakeLists.txt  nnimpl.cpp
implementation/readdataset_images/: CMakeLists.txt  readimagesdataset.cpp
implementation/readdataset_labels/: CMakeLists.txt  readimageslabel.cpp
src/: Neuralnet.hpp  NueralNetparams.hpp  bindatareader.hpp  configreader.hpp  mnistdatareader.hpp
